[Payment] More fix to swagger doc.
