# docs/swagger.json
@@ -93,10 +93,10 @@
                     "application/json"
                 ],
                 "tags": [
-                    "addresses"
+                    "transactions"
                 ],
                 "summary": "Add a transaction to account",
-                "operationId": "add-address",
+                "operationId": "add-transaction",
                 "parameters": [
                     {
                         "description": "Transaction Data",
